# glasshat

./: .env.example  .gitignore  HANDOFF.md  PLAN.md  README.md  exec-report.html  index.html  prototype.html
agents/: README.md
apps/web/: README.md
chosen/: demo.html  playground.html
claudedocs/: 2026-05-14-session-handoff.md  2026-05-15-glasshat-onboarding-report.html  2026-05-17-executive-combination-report.html
data/devpost-gemini3/: INTEGRATION.md  README.md  github-recrawl-audit-2026-05-16.md  github_existing_field_audit.json  rules.html  rules.txt  submissions.csv  submissions.json  summary_counts.json  winners.json
docs/: README.md  architecture.md  demo-prototype-spec.md  gcp-setup.md  hybrid-mode-spec.md  max-wins-plan.md  rubric-synthesis-spec.md  spike-results.md  team-onboarding.md  technical-apex-features.md  wow-moment-design.md
gallery/P05-design-forward/: demo.html
gallery/P07-mobile-first/: demo.html  landing.html
gallery/P11-pragmatist/: demo.html  landing.html
infra/: README.md
mockups/: _review-board.md  index.html
scripts/: README.md
spikes/: 01_spike_a_phoenix_mcp_smoke.py  02_spike_b_adk_loop.py  03_spike_c_adk_mcptoolset.py  04_spike_d_calibration_toy.py  05_spike_e_sse_animation.py  06_spike_f_phoenix_online_evals.py  07_spike_g_phoenix_annotations.py  README.md  pyproject.toml
spikes/results/: spike_a_phoenix_mcp_smoke.json  spike_b_adk_loop.json  spike_c_adk_mcptoolset.json  spike_d_calibration_toy.json  spike_e_sse_animation.json  spike_f_phoenix_online_evals.json  spike_g_phoenix_annotations.json
(+30 files in other folders)
